========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-02-20

  - Match a price source over the entire source string.


2016-02-19

  - Now accepting '=' in currency symbol in order to accommodate currencies in
    Yahoo, which look like this "CNYUSD=X".


2016-02-15

  - Handle an incomplete pickle file by ignoring it and regenerating it silently.


2016-02-14

  - Baked a 2.0b5 and 2.0b6 releases in a further attempt to get the included
    files to be included by setuptools and for pip3 to be able to make a local
    build. setuptools is horrible.

  - Baked a 2.0b4 release for a more recent PyPI availability.

  - Fixed issue #72 - Thanks to Gary Peck for figuring out what was wrong with
    setuptools - and now you should be able to install via pip3 again, which
    will pull all the dependencies automatically. If setuptools isn't installed,
    this should degrade peacefully to distutil.


2016-02-06

  - IMPORTANT API CHANGES FOLLOW:

    I made some important changes to the following classes:

      beancount.core.position.Position
      beancount.core.inventory.Inventory
      beancount.core.data.Posting

    "Position" objects have been restructured to reflect the structure implied
    by the syntax. Instead of a .number (Decimal) and .lot (Lot) objects, a
    Position now has a .units (Amount) and .cost (Cost) objects.

    The "Lot" class has been removed; it has been replaced by a "Cost" class
    with .number (Decimal), .currency (string), .date (datetime.date), .label
    (string) attributes.

    The "Inventory" class is a  list of "Position" objects, and as such it has
    received corresponding adjustments and minor changes.

    "Posting" objects do not contain a .position attribute anymore. Instead, the
    data structure has been flattened to contain .units and .cost objects
    directly. As a result, a Posting acts a bit like a subclass of a Position